# rtcwake-gui

./: .gitignore  CMakeLists.txt  README.md  agents.md
docs/: Doxyfile.in
include/: AnalogClockWidget.h  AppConfig.h  ConfigRepository.h  MainWindow.h  PowerStateDetector.h  RtcWakeController.h  RtcWakeDaemon.h  SchedulePlanner.h  SummaryWriter.h  WarningBanner.h
plasma-widget/: CMakeLists.txt
plasma-widget/package/: metadata.json
plasma-widget/package/contents/ui/: main.qml
resources/: resources.qrc  rtcwake-gui.desktop
scripts/: install.sh  uninstall.sh
src/: AnalogClockWidget.cpp  AppConfig.cpp  CMakeLists.txt  ConfigRepository.cpp  DaemonMain.cpp  MainWindow.cpp  PowerStateDetector.cpp  RtcWakeController.cpp  RtcWakeDaemon.cpp  SchedulePlanner.cpp  SummaryWriter.cpp  WarningAppMain.cpp  WarningBanner.cpp  main.cpp
systemd/: rtcwake-daemon.service
tests/: CMakeLists.txt  ConfigRepositoryTest.cpp  RtcWakeLoggingTest.cpp  SchedulePlannerTest.cpp
